updated custom details

--- a/partials/custom/navigation.hbs
+++ b/partials/custom/navigation.hbs
@@ -40,12 +40,22 @@ Ghostium uses Font Awesome you can find all icons available on the url below
   Follow me
 </li>
 <li class="drawer-list-item">
-  <a href="http://twitter.com" target="_blank">
+  <a href="http://twitter.com/codejaff" target="_blank">
     <i class="fa fa-twitter"></i>Twitter
   </a>
 </li>
 <li class="drawer-list-item">
-  <a href="http://github.com" target="_blank">
+  <a href="http://github.com/thujeevan" target="_blank">
     <i class="fa fa-github"></i>Github
   </a>
+</li>
+<li class="drawer-list-item">
+    <a href="http://lk.linkedin.com/in/thujeevan" target="_blank">
+        <i class="fa fa-linkedin"></i>LinkedIn
+    </a>
+</li>
+<li class="drawer-list-item">
+    <a href="http://stackoverflow.com/users/1592398/code-jaff" target="_blank">
+        <i class="fa fa-stack-overflow"></i>Stackoverflow
+    </a>
 </li>
