--- a/partials/custom/config.hbs
+++ b/partials/custom/config.hbs
@@ -1,8 +1,8 @@
 {{! Your Google Analitycs ID }}
-var ga_ua = 'UA-XXXXX-X';
+var ga_ua = 'UA-41877504-1';
 
 {{! Your Disqus shortname }}
-var disqus_shortname = 'example';
+var disqus_shortname = 'codejaff';
 
 {{! Enable Pjax for asynchronous (AJAX) content loading }}
 var enable_pjax = true;
