--- a/partials/custom/meta.hbs
+++ b/partials/custom/meta.hbs
@@ -1,8 +1,8 @@
 {{! The Twitter username of the owner of this card's domain }}
-<meta name="twitter:site" content="@yourblogtwitter">
+<meta name="twitter:site" content="@codejaff">
 
 {{! The Twitter username of the author of this content }}
-<meta name="twitter:creator" content="@yourtwitter">
+<meta name="twitter:creator" content="@codejaff">
 
 {{! Change for Google Webmaster verification }}
 <meta name="google-site-verification" content="">
